# voice_arm

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: academic_poster_material.md  demo_protocol.md  mock_plan.md  reproducibility_notes.md
lerobot_patches/: local_lerobot_changes.patch
src/voice_arm/: app.py  config.py
src/voice_arm/arm/: __init__.py  controller.py  mock.py  so101.py
src/voice_arm/audio/: __init__.py  mic.py  speaker.py
src/voice_arm/llm/: __init__.py  gemini_live.py  system_prompt.py
src/voice_arm/tools/: __init__.py  declarations.py  dispatcher.py
tests/: test_audio_queue.py  test_declarations.py  test_dispatcher.py  test_mock_arm.py
voice_control/: STEP_BY_STEP_GUIDE.md
voice_control/configs/: act_train.yaml  smolvla_train.yaml
voice_control/data/: api_preset_pose_0.json  api_preset_pose_1.json  api_preset_pose_2.json  api_preset_pose_3.json  api_start_pose.json  smolvla_dataloader_config.json
voice_control/docs/: troubleshooting.md
voice_control/models/: README.md
voice_control/scripts/: api_grasp_workflow.py  build_smolvla_dataloader.py  cloud_server.py  fallback_act.py  main_pipeline.py  prepare_eval_policy_dir.py  prepare_smolvla_dataset.py  record_api_presets.py  record_dataset.sh  save_start_pose.py  smolvla_infer.py  torque_off.py  voice_api_grasp_workflow.py  voice_detector.py
