[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice_arm"
version = "0.1.0"
description = "Voice-controlled assistive robotic arm powered by Gemini Live API"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
voice-arm = "voice_arm.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
